--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li><span>Điện thoại</span> : (+84) 869198117</li>
             <li><span>Email</span> : lengocthien28820@gmail.com</li>
             <li><span>Địa chỉ</span> : Vĩnh Lộc A, Bình Chánh, HCM</li>
-            <li><span>Website</span> : https://abcxyz.tech</li>
+            <li><span>Website</span> : https://thien2220.github.io/</li>
             <li class="spa">
               <a href="#footer" class="linkf">
                 <i class="icon-twitter"></i>
