--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="baner container-fluid" id="head">
       <div class="tt">
-        <h1>Lê Ngọc Thiện</h1>
+        <h1>Lê Ngọc Thiệnn</h1>
         <p>Fullstack Developer</p>
       </div>
     </div>
