--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           ><p class="tran"><i class="icon-doc-text-inv"></i> Lý lịch</p>
         </a>
         <a href="#head" class="name">
-          <img class="anh" src="44.PNG" alt="Thiện" />
+          <img class="anh" src="avt.PNG" alt="Thiện" />
         </a>
         <a href="#certificate" class="linkk"
           ><p class="tran"><i class="icon-mail-alt"></i> Chứng chỉ</p></a
